force-app/main/default/objects/Account_Position__c/Account_Position__c.object-meta.xml
<CustomObject>
    <description>Service Container Positions for Location</description>
    <label>Account Position</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>