force-app/main/default/objects/Account_Position__c/fields/Acorn_Location_Position_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Location_Position_Id__c</fullName>
    <externalId>true</externalId>
    <label>Acorn Location Position Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>