force-app/main/default/objects/Account_Position__c/fields/AlternateCity__c.field-meta.xml
<CustomField>
    <fullName>AlternateCity__c</fullName>
    <label>Alternate City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>