force-app/main/default/objects/Account_Position__c/fields/AlternateCountry__c.field-meta.xml
<CustomField>
    <fullName>AlternateCountry__c</fullName>
    <label>Alternate Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>