force-app/main/default/objects/Account_Position__c/fields/AlternateLatitude__c.field-meta.xml
<CustomField>
    <fullName>AlternateLatitude__c</fullName>
    <label>Alternate Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>