force-app/main/default/objects/Account_Position__c/fields/AlternateLongitude__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongitude__c</fullName>
    <label>Alternate Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>