force-app/main/default/objects/Account_Position__c/fields/AlternatePostalCode__c.field-meta.xml
<CustomField>
    <fullName>AlternatePostalCode__c</fullName>
    <label>Alternate Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>