force-app/main/default/objects/Account_Position__c/fields/AlternateState__c.field-meta.xml
<CustomField>
    <fullName>AlternateState__c</fullName>
    <label>Alternate State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>