force-app/main/default/objects/Account_Position__c/fields/AlternateStreet__c.field-meta.xml
<CustomField>
    <fullName>AlternateStreet__c</fullName>
    <label>Alternate Street</label>
    <type>TextArea</type>
</CustomField>