force-app/main/default/objects/Account_Position__c/fields/Container_Position__c.field-meta.xml
<CustomField>
    <fullName>Container_Position__c</fullName>
    <description>Position at location where container is located</description>
    <label>Container Position</label>
    <type>TextArea</type>
</CustomField>