force-app/main/default/objects/Account_Position__c/fields/Container_Position_Description__c.field-meta.xml
<CustomField>
    <fullName>Container_Position_Description__c</fullName>
    <description>Description of Container Position</description>
    <label>Container Position Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>