force-app/main/default/objects/Account_Position__c/fields/Gate_Code__c.field-meta.xml
<CustomField>
    <fullName>Gate_Code__c</fullName>
    <label>Gate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>